force-app/main/default/objects/Account/fields/Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share__c</fullName>
    <label>Partner Revenue Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>