force-app/main/default/objects/Account/fields/RTB_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>RTB_Account_Manager__c</fullName>
    <label>RTB Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>