force-app/main/default/objects/Account/fields/RTB_Limit__c.field-meta.xml
<CustomField>
    <fullName>RTB_Limit__c</fullName>
    <label>RTB Limit (monthly)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>