force-app/main/default/objects/Account/fields/Sales_Manager_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager/Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>