force-app/main/default/objects/Account/fields/Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Code__c</fullName>
    <label>Salesperson Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>