force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0. Not Started</fullName>
            </value>
            <value>
                <fullName>1. In technical Evaluation</fullName>
            </value>
            <value>
                <fullName>2. Commercial T&amp;C</fullName>
            </value>
            <value>
                <fullName>3. In Integration</fullName>
            </value>
            <value>
                <fullName>4. Integrated</fullName>
            </value>
            <value>
                <fullName>5. Rejected</fullName>
            </value>
            <value>
                <fullName>6. Updating Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>