force-app/main/default/objects/Account/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Client Status Reason (deprecated)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>