force-app/main/default/objects/Account/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>This field is created to identify the NPS survey date. Requested by Jørgen Christensen</description>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>