force-app/main/default/objects/Account/fields/T_C_Signed__c.field-meta.xml
<CustomField>
    <fullName>T_C_Signed__c</fullName>
    <label>T&amp;C Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>