force-app/main/default/objects/Account/fields/Technical_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager__c</fullName>
    <label>Technical Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>