force-app/main/default/objects/Account/fields/Technical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technical_Owner__c</fullName>
    <label>Technical Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>