force-app/main/default/objects/Account/fields/Tiering_Grace_period__c.field-meta.xml
<CustomField>
    <fullName>Tiering_Grace_period__c</fullName>
    <label>Tiering Grace Period</label>
    <type>Date</type>
</CustomField>