force-app/main/default/objects/Account/fields/Type_of_GHG__c.field-meta.xml
<CustomField>
    <fullName>Type_of_GHG__c</fullName>
    <inlineHelpText>Applicable only if contractual relationship in place</inlineHelpText>
    <label>Part of GHG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Dentsu Aegis Network</fullName>
            </value>
            <value>
                <fullName>Havas</fullName>
            </value>
            <value>
                <fullName>Omnicom Media Group</fullName>
            </value>
            <value>
                <fullName>IPG Mediabrands</fullName>
            </value>
            <value>
                <fullName>Publicis</fullName>
            </value>
            <value>
                <fullName>WPP</fullName>
            </value>
            <value>
                <fullName>Local Planet</fullName>
            </value>
            <value>
                <fullName>Other Global Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>