force-app/main/default/objects/Account/fields/Used_Products__c.field-meta.xml
<CustomField>
    <fullName>Used_Products__c</fullName>
    <description>Adform products already being used</description>
    <label>Used Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Creative Solution</label>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Full stack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>