force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <inlineHelpText>Please enter the VAT Number for Contract prurposes</inlineHelpText>
    <label>VAT Number / Sales Tax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>