force-app/main/default/objects/Account/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website for the client/Account</description>
    <label>Website</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>