force-app/main/default/objects/Account/validationRules/Accounts_Parent_Req_Except_Holding_Direc.validationRule-meta.xml
<ValidationRule>
    <fullName>Accounts_Parent_Req_Except_Holding_Direc</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Is_From_Lead__c ) &amp;&amp; 
ISBLANK( ParentId ) &amp;&amp;
(ISPICKVAL(Account_Level__c,&quot;Holding Company Division&quot;)  || (ISPICKVAL(Account_Level__c,&quot;Holding Company Agency&quot;)))</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>In order to maintain an accurate hierarchy of Adform Account records, Parent Account is required to link this Account to its ownership Holding Company Group Account.  If the Holding Group Account record doesn&#39;t already exist, create that record first.</errorMessage>
</ValidationRule>