force-app/main/default/objects/Account/validationRules/Billing_Automated.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Automated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(NavisionID__c)),
  ISPICKVAL(Lock_status__c, &#39;Locked&#39;),  
  $Profile.Name = &#39;Adform Standard User&#39;,
  OR(
    ISCHANGED(Registered_Number__c), 																		 
    ISCHANGED(VAT_Number__c), 												 
    ISCHANGED(Legal_Company_Name__c),																 
    ISCHANGED(BillingCountry),																 
    ISCHANGED(BillingCity),																 
    ISCHANGED(BillingStreet),																		 
    ISCHANGED(BillingPostalCode),																 
    ISCHANGED(ShippingCity),  																	 
    ISCHANGED(ShippingCountry),																		 
    ISCHANGED(ShippingStreet),																 
    ISCHANGED(ShippingPostalCode),
    ISCHANGED(OwnerId),
    ISCHANGED(Relationship_Type__c)
  )
)</errorConditionFormula>
    <errorMessage>You cannot modify :
Billing address;
Registered address;
VAT number;
Registered number;
Legal Company name;
Account owner;
Account Type.
In order to edit these fields - please click button above &quot;Edit Legal info Request&quot;</errorMessage>
</ValidationRule>