force-app/main/default/objects/Account/validationRules/Invoicing_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoicing_Address_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK (ShippingAddress)</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Adress information is required before Account can be saved.</errorMessage>
</ValidationRule>