force-app/main/default/objects/Account/validationRules/Status_Effective_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Effective_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Account_Status__c, &#39;Suspended&#39;),ISPICKVAL(Account_Status__c, &#39;Blocked&#39;)),   ISNULL(Status_Effective_Date__c))</errorConditionFormula>
    <errorDisplayField>Status_Effective_Date__c</errorDisplayField>
    <errorMessage>Status Effective Date is required if client status is Suspended or Blocked.</errorMessage>
</ValidationRule>