force-app/main/default/objects/Account/validationRules/Tier_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_Comments</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Requested_Tier__c, &#39;&#39;)),ISBLANK(Notes__c))</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Requested Tier Comments is required</errorMessage>
</ValidationRule>