force-app/main/default/objects/Account/validationRules/Tier_number_of_brands.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_number_of_brands</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Requested_Tier__c, &#39;&#39;)),ISNULL(Number_of_Brands__c))</errorConditionFormula>
    <errorDisplayField>Number_of_Brands__c</errorDisplayField>
    <errorMessage># of Brands is required</errorMessage>
</ValidationRule>