force-app/main/default/objects/Account/validationRules/Tier_NUmber_Of_Countires.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_NUmber_Of_Countires</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Requested_Tier__c, &#39;&#39;)),ISNULL(Number_of_Countries_Available__c))</errorConditionFormula>
    <errorDisplayField>Number_of_Countries_Available__c</errorDisplayField>
    <errorMessage># of Countries Operating in is required</errorMessage>
</ValidationRule>