force-app/main/default/objects/Account/validationRules/Tier_Potential.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_Potential</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Requested_Tier__c, &#39;&#39;)),ISPICKVAL(Potential_Annual_Spend__c, &#39;&#39;))</errorConditionFormula>
    <errorDisplayField>Potential_Annual_Spend__c</errorDisplayField>
    <errorMessage>Potential net Rev. YOY (EUR)  is required</errorMessage>
</ValidationRule>