force-app/main/default/objects/Account/validationRules/Tier_Projected.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_Projected</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Requested_Tier__c, &#39;&#39;)),ISNULL(Annual_Projected_Revenue__c))</errorConditionFormula>
    <errorDisplayField>Annual_Projected_Revenue__c</errorDisplayField>
    <errorMessage>Projected net Rev. YOY (EUR) is required</errorMessage>
</ValidationRule>